# ScoreLLM

./: .env.example  .gitignore  MANIFEST.in  README.md  app.py  dashboard_app.py  demo.py  diagnostic_test.py  pyproject.toml  requirements.txt  resume_points.md  run_ab_test.py  run_batch.py  upload_dataset.py
.github/workflows/: ci.yml
evalflow/: __init__.py  cache.py  core.py  environments.py  simulator.py  stats.py  storage.py  tracking.py
evalflow/agents/: __init__.py  api_agent.py  hf_agent.py
evalflow/data/: __init__.py  generator.py
evalflow/metrics/: __init__.py  metrics.py  rubric.py
evalflow/reporting/: __init__.py
tests/: conftest.py  test_cache.py  test_core.py  test_generator.py  test_integration.py  test_metrics.py  test_simulator.py  test_stats.py  test_storage.py  test_tracking.py
