[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evalflow"
version = "1.0.0"
description = "Agentic AI Evaluation & Simulation Framework"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Dheeraj Bhaskaruni"},
]
keywords = ["ai", "evaluation", "simulation", "agents", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.30.0,<2.0.0",
    "plotly>=5.18.0",
]
hf = [
    "datasets>=2.16.0",
    "huggingface_hub>=0.20.0",
]
inference = [
    "openai>=1.0.0",
]
torch = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
]
all = [
    "evalflow[dashboard,hf,inference,torch]",
]

[project.urls]
Repository = "https://github.com/dheeraj-bhaskaruni/evalflow"

[tool.setuptools.packages.find]
include = ["evalflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
